rice-grammar/test/corpus/components.txt
==================
Components
==================

MyComponent {
  string: "string"
  boolean: true
  boolean: false
  pixels: 100px
  fraction: 1fr
  percentage: 100%
  value: identifier
  color: #ff00ff

  NestedComponent {
  }
}

---

(source_file
  (component
    (classname)
    (property
      (propname)
      (value
        (string)))
    (property
      (propname)
      (value
        (boolean)))
    (property
      (propname)
      (value
        (boolean)))
    (property
      (propname)
      (value
        (pixels)))
    (property
      (propname)
      (value
        (fraction)))
    (property
      (propname)
      (value
        (percentage)))
    (property
      (propname)
      (value
        (identifier)))
    (property
      (propname)
      (value
        (hex_color)))
    (component
      (classname))))
