rice-grammar/test/corpus/elements.txt
==================
Nested Elements
==================

Element {
  Element

  Element {}

  Element {
    Element {}
  }
}

---

(source_file
  (element
    (classname)
    (element
      (classname))
    (element
      (classname))
    (element
      (classname)
      (element
        (classname)))))
